examples/test/testpolicy17585.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17585
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key35: value32
      key28: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value31
          key49: value15
      podSelector:
        matchLabels:
          key23: value5
          key7: value42
          key4: value35
